@@ -1,14 +1,12 @@
 package net.butfly.albacore.utils.security;
 
 import java.security.MessageDigest;
+import java.util.Base64;
 
 import javax.crypto.KeyGenerator;
 import javax.crypto.Mac;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 /**
  * 基础加密组件
@@ -43,7 +41,7 @@ public class CryptUtils {
 	 * @throws Exception
 	 */
 	public static byte[] decryptBASE64(String key) throws Exception {
-		return (new BASE64Decoder()).decodeBuffer(key);
+		return Base64.getDecoder().decode(key);
 	}
 
 	/**
@@ -54,7 +52,7 @@ public class CryptUtils {
 	 * @throws Exception
 	 */
 	public static String encryptBASE64(byte[] key) throws Exception {
-		return (new BASE64Encoder()).encodeBuffer(key);
+		return Base64.getEncoder().encodeToString(key);
 	}
 
 	/**
